--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "react",
     "create-react-app",
     "template",
-    "rocketseat",
+    "rocketseat"
   ],
   "description": "Template para projetos em React, com Estrutura de Pastas customizada, Estilos Globais, ESLint + Prettier, React Navigation, Reactotron e Axios configurados.",
   "main": "template.json",
